# libmix4sam

./: CMakeLists.txt  gtsamConfig.cmake  libmix4sam.h  libmix4sam.i  libmix4samConfig.cmake.in  readme.md
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  testPsr2DFactor.cpp
libmix4sam/: CMakeLists.txt
libmix4sam/registration/: CMakeLists.txt  PsrFactor.cpp  PsrFactor.h  RadarDopplerFactor.cpp  RadarDopplerFactor.h
libmix4sam/robust/: CMakeLists.txt  NoiseModelNew.cpp  NoiseModelNew.h  numericalRobust.cpp  numericalRobust.h
matlab/: CMakeLists.txt
matlab/+libmix4sam/: configurePath.m
matlab/+libmix4sam/+externals/: boundedline.m  error_ellipse.m
matlab/+libmix4sam/+registration/: EvalExperiment.m  EvalPsr2DExperiment.m  EvalRadarExperiment.m  genPsr2DProblem.m  genRadarProblem.m  loadRegistrationExperiment.m  loadRegistrationResult.m  optimizePsr2DProblem.m  optimizeRadarProblem.m  runPsr2DExperiment.m  runRadarExperiment.m  saveRegistrationResult.m
matlab/+libmix4sam/+sensors/: Radar.m  genDopplerVelocity.m
matlab/+libmix4sam/+utils/: Landmarks.m  Landmarks2D.m  OutlierModelSquare.m  PlotNice.m  bhattacharyyaDist.m  getVariableChecksum.m  gtClass2num.m  num2GtClass.m  plot2DTrajectory.m  readJson.m  saveAsJson.m  transformTo.m
matlab/+libmix4sam/+wrappers/+icpCov/: optimizePsr2DProblem.m  runPsr2DExperiment.m
matlab/+libmix4sam/+wrappers/+motionEstimation/: optimizePsr2DProblem.m  optimizeRadarProblem.m  runPsr2DExperiment.m  runRadarExperiment.m
matlab/libmix4sam/tests/: testPsr2DFactor.m
matlab/statistics/: CredibilityRadarPlot.m  CredibilityTests.m  CredibilityTestsPlot.m  MetricsSE2.m  MetricsSE2Plot.m  SE2Type.m  SE3Type.m
python/: CMakeLists.txt
python/examples/: testPsr2DFactor.ipynb  testPsr2DFactor.py
python/libmix4sam/: __init__.py
python/libmix4sam/specializations/: libmix4sam.h
python/templates/: libmix4sam.tpl  setup.py.in
